Added homepage link to header logo.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,20 @@
   </head>
   <body>
     <!-- Header menu -->
-    <div class="navbar">
-      <div class="brand"> <img src="images/headerlogo.png" alt="Brand Logo"> </div>
-      <a href="#">email</a> <a href="#">FAQ</a> <a href="#">accounts</a> <a href="#">update</a>
-      <a href="#">what’s new?</a> </div>
+    <div class="navbar"> <a href="index.html"> </a>
+      <div class="brand"><a href="index.html"> </a><a href="index.html">
+          <img src="images/headerlogo.png" alt="Brand Logo"> </a> </div>
+      <a href="#">
+        <p>email</p>
+      </a> <a href="#">
+        <p>FAQ</p>
+      </a> <a href="#">
+        <p>accounts</p>
+      </a> <a href="#">
+        <p>update</p>
+      </a> <a href="#">
+        <p>what’s new?</p>
+      </a> </div>
     <!-- Main content -->
     <main style="flex: 1;">
       <div class="main-content">
