Updated logo details.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   <body>
     <!-- Header menu -->
     <div class="navbar"> <a href="index.html"> </a>
-      <div class="brand"><a href="index.html"> </a><a href="index.html">
-          <img src="images/headerlogo.png" alt="Brand Logo"> </a> </div>
+      <div class="brand"><a href="index.html"> </a><a href="index.html"> <img
+
+            src="images/headerlogo.png" alt="Brand Logo"> </a> </div>
       <a href="#">
         <p>email</p>
       </a> <a href="#">
@@ -33,8 +34,7 @@
       <div class="main-content">
         <!-- Left-aligned image inside the container --> <a href="index.html">
           <img src="images/powered%20by%20knowsmore.png" alt="KnowsMore" class="logo-img">
-        </a>
-        <!-- Centered searchbar and button -->
+          </a> <!-- Centered searchbar and button -->
         <div class="search-container">
           <div class="searchbar"> <img src="images/searchicon.png" align="left">
             <input placeholder="Search" type="text"> <img src="images/mic.png"
