--- a/index.html
+++ b/index.html
@@ -12,21 +12,20 @@
     <link rel="stylesheet" href="/layouts/marketing/styles.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
-  <body>
-    <!-- Header menu -->
+  <body> <!-- Header menu -->
     <div class="navbar"> <a href="index.html"> </a>
-      <div class="brand"><a href="index.html"> </a><a href="index.html"> <img
+      <div class="brand"><a href="index.html"> </a><a href="/index.html"> <img
 
             src="images/headerlogo.png" alt="Brand Logo"> </a> </div>
-      <a href="#">
+      <a href="/email.html">
         <p>email</p>
-      </a> <a href="#">
+      </a> <a href="/faq.html">
         <p>FAQ</p>
-      </a> <a href="#">
+      </a> <a href="/accounts.html">
         <p>accounts</p>
-      </a> <a href="#">
+      </a> <a href="/update.html">
         <p>update</p>
-      </a> <a href="#">
+      </a> <a href="/whats-new.html">
         <p>what’s new?</p>
       </a> </div>
     <!-- Main content -->
@@ -34,7 +33,8 @@
       <div class="main-content">
         <!-- Left-aligned image inside the container --> <a href="index.html">
           <img src="images/powered%20by%20knowsmore.png" alt="KnowsMore" class="logo-img">
-          </a> <!-- Centered searchbar and button -->
+        </a>
+        <!-- Centered searchbar and button -->
         <div class="search-container">
           <div class="searchbar"> <img src="images/searchicon.png" align="left">
             <input placeholder="Search" type="text"> <img src="images/mic.png"
@@ -45,8 +45,8 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <div class="footer-links"> <a href="#">Privacy</a> <a href="#">Terms</a>
-        <a href="#">Settings</a> </div>
+      <div class="footer-links"> <a href="/privacy.html">Privacy</a> <a href="/terms.html">Terms</a>
+        <a href="/settings.html">Settings</a> </div>
     </footer>
     <script>
     function announce() {
