--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
   </head>
   <body> <!-- Header menu -->
     <div class="navbar"> <a href="index.html"> </a>
-      <div class="brand"><a href="index.html"> </a><a href="/index.html"> <img
+      <div class="brand"><a href="index.html"> </a><a href="/Search-Engine-Website/index.html"> <img
 
             src="images/headerlogo.png" alt="Brand Logo"> </a> </div>
-      <a href="/email.html">
+      <a href="/Search-Engine-Website/email.html">
         <p>email</p>
-      </a> <a href="/faq.html">
+      </a> <a href="/Search-Engine-Website/faq.html">
         <p>FAQ</p>
-      </a> <a href="/accounts.html">
+      </a> <a href="/Search-Engine-Website/accounts.html">
         <p>accounts</p>
-      </a> <a href="/update.html">
+      </a> <a href="/Search-Engine-Website/update.html">
         <p>update</p>
-      </a> <a href="/whats-new.html">
+      </a> <a href="/Search-Engine-Website/whats-new.html">
         <p>what’s new?</p>
       </a> </div>
     <!-- Main content -->
@@ -45,8 +45,8 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <div class="footer-links"> <a href="/privacy.html">Privacy</a> <a href="/terms.html">Terms</a>
-        <a href="/settings.html">Settings</a> </div>
+      <div class="footer-links"> <a href="/Search-Engine-Website/privacy.html">Privacy</a> <a href="/Search-Engine-Website/terms.html">Terms</a>
+        <a href="/Search-Engine-Website/settings.html">Settings</a> </div>
     </footer>
     <script>
     function announce() {
